[Mac] Fix for zoom decoration regression

The decoration should update if its visibility has changed

BUG=687903

Review-Url: https://codereview.chromium.org/2688603003
Cr-Commit-Position: refs/heads/master@{#449700}

Former-commit-id: d88656394d232e54292d28ba07659182b3e331c6